fixed card title alignment

--- a/frontend/src/Components/Entity/Entity.css
+++ b/frontend/src/Components/Entity/Entity.css
@@ -41,6 +41,9 @@
     max-width: 100%;
     padding: 10px;
 }
+.card-title {
+    height: 50%;
+}
 .card-text {
     margin-bottom: 10px;
 }
